--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -28,7 +28,7 @@ server {
   charset utf-8;
 
   location / {
-      try_files $uri $uri/ /index.php?$query_string;
+      try_files $uri $uri/ /index.php?$query_string; $uri.php$is_args$query_string;
   }
 
   location = /favicon.ico { access_log off; log_not_found off; }
