--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -28,7 +28,7 @@ server {
   charset utf-8;
 
   location / {
-      try_files $uri $uri/ /index.php?$query_string; $uri.php$is_args$query_string;
+      try_files $uri $uri/ /index.php?$query_string; @extensionless-php;
   }
 
   location = /favicon.ico { access_log off; log_not_found off; }
@@ -40,6 +40,10 @@ server {
     expires 5d;
   }
 
+  location @extensionless-php {
+    rewrite ^(.*)$ $1.php last;
+  }
+  
   location ~ \.php$ {
     fastcgi_split_path_info ^(.+\.php)(/.+)$;
     fastcgi_pass unix:/var/run/php-fpm.sock;
@@ -60,6 +64,7 @@ server {
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param SCRIPT_NAME $fastcgi_script_name;
   }
+
 
   # deny access to . files
   location ~ /\. {
