--- a/conf/nginx/nginx-site.conf
+++ b/conf/nginx/nginx-site.conf
@@ -28,7 +28,7 @@ server {
   charset utf-8;
 
   location / {
-      try_files $uri $uri/ /index.php?$query_string; @extensionless-php;
+      try_files $uri $uri/ /index.php?$query_string;
   }
 
   location = /favicon.ico { access_log off; log_not_found off; }
@@ -38,10 +38,6 @@ server {
 
   location ~* \.(jpg|jpeg|gif|png|css|js|ico|webp|tiff|ttf|svg)$ {
     expires 5d;
-  }
-
-  location @extensionless-php {
-    rewrite ^(.*)$ $1.php last;
   }
   
   location ~ \.php$ {
